# interactive_world_sim

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
configurations/: config.yaml  letters_generalization.yaml
configurations/algorithm/: latent_world_model.yaml
configurations/dataset/: real_aloha_dataset.yaml  sim_aloha_dataset.yaml
configurations/experiment/: base_pytorch.yaml
interactive_world_sim/algorithms/latent_dynamics/: latent_world_model.py
interactive_world_sim/algorithms/models/: attention.py
interactive_world_sim/datasets/latent_dynamics/: real_aloha_dataset.py  sim_aloha_dataset.py
interactive_world_sim/environments/: __init__.py  sim_aloha_planar_push_env.py  sim_aloha_pusht_env.py
interactive_world_sim/experiments/: exp_base.py
interactive_world_sim/utils/: motion_planner.py
scripts/: README_letters_training.md  check_letters_dataset_distribution.py  merge_stage2_stage3_checkpoint.py  prepare_letters_dataset.py  train_letters_generalization.py  train_letters_stage1_local.zsh
scripts/data_collection/: README.md  collect_all_letters.zsh  collect_letters_balanced.zsh  collect_letters_two_gpus.zsh  sim_aloha_dataset_collection_scripted.py
scripts/hpc/: README.md  merge_stage2_stage3_checkpoint.sbatch  train_all_stages.sbatch  train_letters_stage1.sbatch  train_letters_stage2.sbatch  train_stage2_only.sbatch  train_stage3_only.sbatch  viz_letters.sbatch  viz_stage2_trainset.sbatch
scripts/inference/: teleoperate_keyboard.py
